# carbon_2

./: install_deps.bat  print_structure.py  pyproject.toml  run_backend.py
data/CEA_price_csv/: CEA_original_data_v1.0.csv
data/EDUS/: annual_summary.csv  enterprises_info.csv  simulated_enterprise_data.csv
data/raw/国家温室气体排放因子数据库/: 净购入电力与热力_电力消费排放因子-省级.csv  净购入电力与热力_电力消费特殊排放因子.csv  工业生产过程和产品使用_化工生产过程排放.csv  工业生产过程和产品使用_含氟产品使用.csv  工业生产过程和产品使用_含氟产品生产.csv  工业生产过程和产品使用_平板玻璃生产过程.csv  工业生产过程和产品使用_熟料生产过程.csv  工业生产过程和产品使用_碳酸盐使用过程.csv  工业生产过程和产品使用_能源用作原材料使用.csv  废弃物处理处置_固废处理.csv  废弃物处理处置_废水处理.csv  放空与逃逸_煤炭生产.csv  燃料燃烧_化石燃料.csv  燃料燃烧_生物质燃料.csv
data/raw/线路损失率/: 线路损失率.csv
data/raw/输配电碳因子/: 输配电碳因子.csv
data/results/CBAM/: CBAM_calculation.py  sqlite_test.py
data/results/carbon_factors/: daily_carbon_factors_all.csv
database/: __init__.py  cbam_database.db  settings.yaml
src/CBAM/: CBAM_calculation.py
src/CBAM/CEA/: CEAforecast4.py  CEAforecast5.py  data_dealing_CEA.py
src/CBAM/database/: cbam_database.db  forecast.csv  import sqlite3.py  sqlchange1
src/CBAM/datas_for_CBAM/: read_CBAM_datas.py  store_datas.py
src/CEP/: calculate_GEF.py  calculate_daily_GEF.PY  monthly_percentage.py
src/CEP_predict/: carbon_factor_predictor.py
src/carbon_footprint_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/web/agent/: index.html  script.js  style.css
src/web/base_info/: index.html  script.js  style.css
src/web/carbon_footprint/: index.html  script.js  style.css
src/web/cbam_calculation/: index.html  script.js  style.css
(+82 files in other folders)
