[project]
name = "carbon-footprint-api"
version = "1.0.0"
description = "碳足迹计算和CBAM税计算API"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "tensorflow>=2.11.1",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.7.5",
    "flask>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
